<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.anesabml.quotey.ui.settings.TimePreference
        android:defaultValue="480"
        app:iconSpaceReserved="false"
        app:key="time"
        app:summary="@string/time_summary"
        app:title="@string/time_title"
        app:useSimpleSummaryProvider="true" />

    <MultiSelectListPreference
        app:entries="@array/days_entries"
        app:entryValues="@array/days_values"
        app:iconSpaceReserved="false"
        app:key="days"
        app:summary="@string/days_summary"
        app:title="@string/days_title"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:defaultValue="auto"
        app:entries="@array/themes_entries"
        app:entryValues="@array/themes_values"
        app:iconSpaceReserved="false"
        app:key="theme"
        app:summary="@string/theme_title"
        app:title="@string/theme_summary"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
